# spotify--

./: .gitignore  Cargo.toml  scratch.rs  scratch2.rs  scratch3.rs  scratch4.rs  scratch5.rs  scratch6.rs
src/: app_settings.rs  artist_cache.rs  auth.rs  config.rs  downloads.rs  gui.rs  lastfm.rs  main.rs  metadata.rs  player.rs  playlist_cache.rs  spotify_api.rs  spotify_token_store.rs  telemetry.rs
