[package]
name = "onyx"
version = "0.1.0"
edition = "2024"
description = "A minimalist, anti-bloat desktop Spotify client"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Spotify Web API + OAuth2
rspotify = { version = "0.13", features = ["client-reqwest"] }

# OS-native secret storage
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

# Local HTTP server for OAuth callback
tiny_http = "0.12"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# URL parsing (OAuth callback)
url = "2"

# Open browser for OAuth
open = "5"

# Ergonomic error handling
anyhow = "1"
