[package]
name = "onyx"
version = "0.1.0"
edition = "2024"
description = "A minimalist, anti-bloat desktop Spotify client"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Spotify Web API + OAuth2
rspotify = { version = "0.16.1", features = ["client-reqwest"] }

# OS-native secret storage
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

# Local HTTP server for OAuth callback
tiny_http = "0.12"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# URL parsing (OAuth callback)
url = "2"

# Open browser for OAuth
open = "5"

# Ergonomic error handling
anyhow = "1"

# Audio streaming engine (Spotify Connect)
librespot = { version = "0.8", default-features = false, features = ["rodio-backend", "native-tls"] }

# Logging
log = "0.4"
env_logger = "0.11"

# User directories (for cache path)
dirs = "6"

# HTTP client for Last.fm API
reqwest = { version = "0.12", features = ["json"] }

# Async stream utilities (for rspotify pagination)
futures-util = "0.3"

# Local Telemetry Database
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = "0.4"
zip = "8.6.0"
eframe = "0.33.3"
egui_extras = { version = "0.33.3", features = ["all_loaders"] }
image = { version = "0.25.10", features = ["jpeg"], default-features = false }
rfd = "0.17.2"
